--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 
 /lib
 /dist
-/loader/bundles
-/loader/swBoot.js
+/loader
 
 # Created by https://www.toptal.com/developers/gitignore/api/webstorm+all,vim,node
 # Edit at https://www.toptal.com/developers/gitignore?templates=webstorm+all,vim,node
